# deploy-adk-agent-engine

./: .env.example  .gitignore  README.md  pyproject.toml
adk_short_bot/: agent.py  prompt.py
adk_short_bot/tools/: __init__.py  character_counter.py
deployment/: local.py  remote.py
